syntax = "proto3";

package zksync.config.wallets;

message PrivateKeyWallet {
  optional string address = 1; // optional
  optional string private_key = 2; // required
}

message AddressWallet {
  optional string address = 2; // required
}

message Wallets {
  optional PrivateKeyWallet operator = 1; // Private key is required
  optional PrivateKeyWallet blob_operator = 2; // Private key is required
  optional AddressWallet fee_account = 3; // Only address required for server
}
